2000-05-04  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/gnome/window-main.c (gnc_main_create_toolbar): removed the
	'open file' item from the toolbar, to lessen conflict with the
	'open account' item.

2000-05-03  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/gnome/window-register.c: add a gui option for sorting by
	date entered.

	* src/engine/Query.c: add a BY_DATE_ENTERED sorting option.

	* src/scm/prefs.scm: convert the gui options to internal options.

	* src/scm/options.scm: add an interal option type with no frills.

	* src/engine/util.c (xaccSPrintAmount): add a space after the
	currency code to make the currency symbol.
	(gnc_lconv_set_char): check for the lconv default value using
	CHAR_MAX, not 127.

2000-05-02  Robert Graham Merkel  <rgmerk@mira.net>

	* man/gnc-prices.1: fixed typo.

	* src/scm/report/transaction-report-2.scm: fixed typo for debit string
	and reversed displayed sign in debit column.

2000-05-01  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/report/transaction-report-2.scm : Added i18n and
	optional two-columns printout to the new transaction report.

2000-04-30  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/engine/Queue.c (xaccQueueGetShares): computation should start
	at the tail split, not at split 0.
	(xaccQueueGetValue): ditto.

	* src/scm/report/average-balance.scm: track stock account balances,
	i.e. value, not cost.

2000-04-29  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/register/splitreg.c: add a flag determining whether to use
	regular labels or only debit/credit.

	* src/gnome/top-level.c: implement the debit/credit label option

	* src/scm/prefs.scm: added option to only use debit/credit labels
	in the register.

	* src/MultiLedger.h: remove the MAX_SPLITS constants

	* src/gnome/window-main.c (gnc_ui_refresh_statusbar): no need to
	reverse quantities.

	* src/gnome/top-level.c (gnc_configure_reverse_balance): take out
	debit sign-reversal type.
